font changed to Rubik

--- a/MusicPlayer/Spotify/Pages/Items/ArtistAlbums.razor.css
+++ b/MusicPlayer/Spotify/Pages/Items/ArtistAlbums.razor.css
@@ -6,7 +6,7 @@
 .info {
     display: flex;
     justify-content: space-between;
-    font-family: DmSans, sans-serif;
+    font-family: 'Rubik', sans-serif;
 }
 
 .more-by {
