--- a/MusicPlayer/Spotify/Pages/Items/TrackRow.razor.css
+++ b/MusicPlayer/Spotify/Pages/Items/TrackRow.razor.css
@@ -6,7 +6,7 @@
     align-items: center;
     padding: 0 16px;
     border-radius: 5px;
-    font-family: DmSans, sans-serif;
+    font-family: 'Rubik', sans-serif;
     font-size: 14px;
 }
 
