--- a/MusicPlayer/Spotify/Pages/Index.razor.css
+++ b/MusicPlayer/Spotify/Pages/Index.razor.css
@@ -7,6 +7,7 @@
     box-sizing: border-box;
     padding-left: 25px;
     padding-right: 15px;
+    font-family: 'Rubik', sans-serif;
 }
 
 .tracks-area {
@@ -18,7 +19,6 @@
 }
 
     .tracks-area a {
-        font-family: DmSans, sans-serif;
         font-size: 24px;
         font-weight: bold;
         text-decoration: none;
@@ -40,6 +40,7 @@
 
 .title {
     margin-bottom: 15px;
+    padding: 10px 0;
 }
 
 ::-webkit-scrollbar {
