--- a/MusicPlayer/Spotify/Pages/Items/ReleasePublisher.razor.css
+++ b/MusicPlayer/Spotify/Pages/Items/ReleasePublisher.razor.css
@@ -2,7 +2,7 @@
     margin-top: 30px;
     padding: 0 40px;
     color: #b3b3b3;
-    font-family: DmSans, sans-serif;
+    font-family: 'Rubik', sans-serif;
     display: flex;
     flex-direction: column;
     gap: 3px;
