--- a/MusicPlayer/Spotify/Pages/Items/SidePlaylist.razor.css
+++ b/MusicPlayer/Spotify/Pages/Items/SidePlaylist.razor.css
@@ -40,8 +40,8 @@
         line-height: 22px;
         margin: 0;
         padding: 0;
-        font-family: DmSans, sans-serif;
-        font-weight: 400;
+        font-family: 'Rubik', sans-serif;
+        font-weight: 500;
         text-overflow: ellipsis;
         overflow: hidden;
         white-space: nowrap;
