--- a/MusicPlayer/Spotify/Pages/Items/TrackList.razor.css
+++ b/MusicPlayer/Spotify/Pages/Items/TrackList.razor.css
@@ -10,6 +10,7 @@
     min-width: 40%;
     width: 100%;
     height: fit-content;
+    font-family: 'Rubik', sans-serif;
 }
 
 .info-container {
@@ -60,7 +61,6 @@
     }
 
 .type {
-    font-family: DmSans, sans-serif;
     font-size: 16px;
     color: #ffffff;
 }
@@ -68,8 +68,7 @@
 .name-area {
     margin-top: 8px;
     margin-bottom: 12px;
-    font-family: DmSans, sans-serif;
-    font-size: 22px;
+    font-size: 24px;
     color: #ffffff;
     overflow: hidden;
 }
@@ -83,7 +82,6 @@
     }
 
 .authors {
-    font-family: DmSans, sans-serif;
     font-size: 14px;
     color: #ffffffb2;
     -webkit-line-clamp: 3;
@@ -97,7 +95,6 @@
     align-items: center;
     margin-top: 8px;
     width: max-content;
-    font-family: DmSans, sans-serif;
 }
 
 .spotify-logo {
@@ -114,7 +111,6 @@
     }
 
     .spotify-logo a {
-        font-family: DmSans, sans-serif;
         font-size: 16px;
         text-decoration: none;
         color: #ffffff;
@@ -126,19 +122,16 @@
 
 .dot-separator {
     margin: 0 5px;
-    font-family: DmSans, sans-serif;
     font-size: 16px;
     color: #ffffff;
 }
 
 .songs-count {
-    font-family: DmSans, sans-serif;
     font-size: 16px;
     color: #ffffff;
 }
 
 .songs-duration {
-    font-family: DmSans, sans-serif;
     font-size: 16px;
     color: #ffffffb2;
 }
@@ -165,7 +158,7 @@
     cursor: pointer;
     font-size: 64px;
     color: #1fa4df;
-    background-color: #00000000;
+    background-color: transparent;
 }
 
     .play-button:hover {
@@ -201,7 +194,6 @@
     max-height: fit-content;
     border: 0;
     cursor: pointer;
-    font-family: DmSans, sans-serif;
     font-size: 24px;
     color: #ffffffb2;
     background-color: #00000000;
@@ -226,7 +218,6 @@
     max-height: fit-content;
     border: 0;
     cursor: pointer;
-    font-family: DmSans, sans-serif;
     color: #ffffffb2;
     background-color: #00000000;
 }
@@ -258,7 +249,6 @@
     align-items: center;
     padding: 0 16px;
     border-bottom: 1px solid hsla(0,0%,100%,.1);
-    font-family: DmSans, sans-serif;
     font-size: 14px;
     color: #b3b3b3;
 }
