--- a/MusicPlayer/Spotify/Shared/Menu.razor.css
+++ b/MusicPlayer/Spotify/Shared/Menu.razor.css
@@ -1,12 +1,10 @@
-﻿* {
-    font-family: 'Franklin Gothic', 'Arial Narrow', Arial, sans-serif;
-}
-
-.menu-item {
+﻿.menu-item {
     height: 50px;
     display: flex;
     align-items: center;
     cursor: pointer;
+    font-family: 'Rubik', sans-serif;
+    font-weight: 500;
 }
 
     .menu-item:hover p, .menu-item:hover i {
