--- a/MusicPlayer/Spotify/Shared/Topbar.razor.css
+++ b/MusicPlayer/Spotify/Shared/Topbar.razor.css
@@ -7,7 +7,7 @@
     justify-content: space-between;
     z-index: 1;
     background-color: transparent;
-    font-family: DmSans, sans-serif;
+    font-family: 'Rubik', sans-serif;
     box-sizing: border-box;
 }
 
