--- a/MusicPlayer/Spotify/Shared/Trackbar.razor.css
+++ b/MusicPlayer/Spotify/Shared/Trackbar.razor.css
@@ -16,6 +16,7 @@ a {
     display: flex;
     height: 100%;
     align-items: center;
+    font-family: 'Rubik', sans-serif;
 }
 
 
@@ -82,7 +83,6 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    font-family: 'Franklin Gothic', 'Arial Narrow', Arial, sans-serif;
     max-width: 20rem;
     position: relative;
     overflow: hidden;
