--- a/MusicPlayer/Spotify/Shared/MainLayout.razor
+++ b/MusicPlayer/Spotify/Shared/MainLayout.razor
@@ -18,7 +18,7 @@
                 {
                     @foreach (var pl in Playlists)
                     {
-                        <SidePlaylist Playlist="pl"></SidePlaylist>
+                        <SidePlaylist TrackCollection="pl"></SidePlaylist>
                     }
                 }
             </div>
