--- a/MusicPlayer/Spotify/Pages/Items/TrackCollectionCard.razor.css
+++ b/MusicPlayer/Spotify/Pages/Items/TrackCollectionCard.razor.css
@@ -74,23 +74,6 @@
         transition: 0.2s;
     }
 
-    .image .play-button {
-        position: absolute;
-        opacity: 0;
-        width: 50px;
-        height: 50px;
-        background: #1e9ed7;
-        right: 10px;
-        bottom: 5px;
-        border-radius: 50%;
-        display: flex;
-    }
-
-    .image i {
-        transform: scale(1);
-        font-size: 20px;
-        margin: auto;
-    }
 
 .title-area {
     overflow: hidden;
@@ -137,10 +120,26 @@
 
 .play-button {
     transition: 0.3s;
+    width: 50px;
+    height: 50px;
+    padding: 0;
+    border: 0;
+    border-radius: 32px;
+    cursor: pointer;
+    font-size: 64px;
+    color: #1fa4df;
+    background-color: #000;
+    position: absolute;
+    opacity: 0;
+    right: 10px;
+    bottom: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
     .play-button:hover {
         transition: 0s;
-        background: #1fa4df;
+        color: #1fa4df;
         transform: scale(1.05);
     }
