--- a/MusicPlayer/Spotify/Shared/Trackbar.razor.css
+++ b/MusicPlayer/Spotify/Shared/Trackbar.razor.css
@@ -158,7 +158,6 @@ a {
     display: flex;
     justify-content: center;
     gap: 16px;
-    color: #1e9ed7;
     margin-bottom: 8px;
 }
 
@@ -193,7 +192,15 @@ a {
     gap: 8px;
 }
 
-.controls-area .slider-area {
+.shuffle-on, .repeat-on {
+    color: #1e9ed7;
+}
+
+    .shuffle-on:hover, .repeat-on:hover {
+        color: #1fa8e5;
+    }
+
+.slider-area {
     display: flex;
     width: 100%;
     height: max-content;
@@ -202,54 +209,54 @@ a {
     gap: 8px;
 }
 
-.slider-area .slider-container {
-    width: 100%;
-    height: 20px;
-}
-
-.slider-area .current-time, .slider-area .duration-time {
-    min-width: 40px;
-    color: #a7a7a7;
-    font-size: 13px;
-    height: 20px;
-    line-height: 20px;
-    font-family: 'Franklin Gothic', 'Arial Narrow', Arial, sans-serif;
-}
-
-.slider-area .current-time {
-    text-align: right;
-}
-
-.slider-area .duration-time {
-    text-align: left;
-}
-
-
-.slider-area .slider-container .slider {
-    appearance: none;
-    background-image: url("data:image/svg+xml,<svg xmlns='http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg' width='100%' height='8'><defs><linearGradient id='blue-grad'><stop stop-color='%231e9ed7' offset='0%'/><stop stop-color='white' offset='100%'/></linearGradient></defs><rect x='0' y='0' width='0%' height='8' rx='4' fill='url(%23blue-grad)'/></svg>"), url("data:image/svg+xml,<svg xmlns='http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg' width='100%' height='8'><rect x='0' y='0' width='100%' height='8' rx='4' fill='%234d4c4d'/></svg>");
-    border-radius: 4px;
-    height: 8px;
-    outline: none;
-    width: 100%;
-}
-
-    .slider-area .slider-container .slider::-webkit-slider-thumb {
-        appearance: none;
-        height: 10px;
-        width: 0px;
-        border-radius: 5px;
-        background: transparent;
+    .slider-area .slider-container {
+        width: 100%;
+        height: 20px;
     }
 
-    .slider-area .slider-container .slider::-moz-range-thumb {
-        appearance: none;
-        height: 10px;
-        width: 0px;
-        border-radius: 5px;
-        background: transparent;
-        border: none;
+    .slider-area .current-time, .slider-area .duration-time {
+        min-width: 40px;
+        color: #a7a7a7;
+        font-size: 13px;
+        height: 20px;
+        line-height: 20px;
+        font-family: 'Franklin Gothic', 'Arial Narrow', Arial, sans-serif;
     }
+
+    .slider-area .current-time {
+        text-align: right;
+    }
+
+    .slider-area .duration-time {
+        text-align: left;
+    }
+
+
+    .slider-area .slider-container .slider {
+        appearance: none;
+        background-image: url("data:image/svg+xml,<svg xmlns='http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg' width='100%' height='8'><defs><linearGradient id='blue-grad'><stop stop-color='%231e9ed7' offset='0%'/><stop stop-color='white' offset='100%'/></linearGradient></defs><rect x='0' y='0' width='0%' height='8' rx='4' fill='url(%23blue-grad)'/></svg>"), url("data:image/svg+xml,<svg xmlns='http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg' width='100%' height='8'><rect x='0' y='0' width='100%' height='8' rx='4' fill='%234d4c4d'/></svg>");
+        border-radius: 4px;
+        height: 8px;
+        outline: none;
+        width: 100%;
+    }
+
+        .slider-area .slider-container .slider::-webkit-slider-thumb {
+            appearance: none;
+            height: 10px;
+            width: 0px;
+            border-radius: 5px;
+            background: transparent;
+        }
+
+        .slider-area .slider-container .slider::-moz-range-thumb {
+            appearance: none;
+            height: 10px;
+            width: 0px;
+            border-radius: 5px;
+            background: transparent;
+            border: none;
+        }
 
 .volume-slider-area {
     display: flex;
