--- a/MusicPlayer/Spotify/Shared/Trackbar.razor
+++ b/MusicPlayer/Spotify/Shared/Trackbar.razor
@@ -51,7 +51,8 @@
             </div>
 
             <button @ref=PlayButton class="playpause-button button @(Track is null ? "inactive" : "")">
-                <i class="fa-solid @(Track is null ? "inactive fa-circle-pause" : "fa-circle-play")"></i>
+                <i class="fa-solid @(IsPlaying ? "fa-circle-pause" : "fa-circle-play")
+                                   @(Track is null ? "inactive" : "")"></i>
             </button>
 
             <div class="buttons-right-area">
@@ -158,6 +159,8 @@
 
     RepeatMode Repeat { get; set; }
 
+    bool IsPlaying { get; set; }
+
     protected override async Task OnInitializedAsync()
     {
         ArgumentNullException.ThrowIfNull(Tracks);
@@ -171,6 +174,7 @@
         playerService.StartCollection += OnStartCollcetion;
         playerService.PauseTrack += OnPauseTrack;
         playerService.PlayTrack += OnPlayTrack;
+        playerService.PlayStateChanged += OnPlayStateChanged;
     }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
@@ -285,17 +289,48 @@
 
     private void OnPauseTrack(object? sender, EventArgs e)
     {
+        Pause();
+    }
+
+    private void OnPlayTrack(object? sender, EventArgs e)
+    {
+        Play();
+    }
+
+    private void Pause()
+    {
         if (jsModule is not null)
         {
             jsModule.InvokeVoidAsync("Trackbar.Pause", Audio);
         }
     }
 
-    private void OnPlayTrack(object? sender, EventArgs e)
+    private void Play()
     {
         if (jsModule is not null)
         {
             jsModule.InvokeVoidAsync("Trackbar.Play", Audio);
+        }
+    }
+
+    private void Start()
+    {
+        if (jsModule is not null)
+        {
+            jsModule.InvokeVoidAsync("Trackbar.Start", Audio);
+        }
+    }
+
+    private async Task SetStartTrack()
+    {
+        if (Tracks.Count > 0)
+        {
+            TrackIndex = 0;
+            InitializeTrack(Tracks[TrackIndex].Id);
+            if (jsModule is not null)
+            {
+                await jsModule.InvokeVoidAsync("Trackbar.SetStartTrack", Audio);
+            }
         }
     }
 
@@ -329,25 +364,30 @@
     [JSInvokable]
     public async Task PlayNextWhenEnded()
     {
+        if (TrackIndex < 0)
+        {
+            return;
+        }
+
+        if (TrackIndex == Tracks.Count - 1 && Repeat == RepeatMode.None)
+        {
+            await SetStartTrack();
+            return;
+        }
+
         if (TrackIndex == Tracks.Count - 1 && Repeat == RepeatMode.Repeat)
         {
             TrackIndex = 0;
             InitializeTrack(Tracks[TrackIndex].Id);
         }
-        else if (Repeat == RepeatMode.RepeatOnce)
-        {
-            if (jsModule is not null)
-            {
-                await jsModule.InvokeVoidAsync("Trackbar.Start", Audio);
-            }
-        }
-        else if (TrackIndex < 0 || TrackIndex + 1 >= Tracks.Count)
-        {
-            return;
-        }
-        else
+        else if (Repeat != RepeatMode.RepeatOnce)
         {
             InitializeTrack(Tracks[++TrackIndex].Id);
+        }
+
+        if (jsModule is not null)
+        {
+            await jsModule.InvokeVoidAsync("Trackbar.Start", Audio);
         }
 
         StateHasChanged();
@@ -536,6 +576,12 @@
             RepeatMode.Repeat => RepeatMode.RepeatOnce,
             _ => RepeatMode.None,
         };
+    }
+
+    public void OnPlayStateChanged(object sender, PlayStateChangedEventArgs e)
+    {
+        IsPlaying = e.IsPaused ? false : true;
+        StateHasChanged();
     }
 
     enum RepeatMode
