--- a/MusicPlayer/Spotify/Pages/Items/TrackCollectionCard.razor.css
+++ b/MusicPlayer/Spotify/Pages/Items/TrackCollectionCard.razor.css
@@ -124,7 +124,7 @@
     height: 50px;
     padding: 0;
     border: 0;
-    border-radius: 32px;
+    border-radius: 50%;
     cursor: pointer;
     font-size: 64px;
     color: #1fa4df;
