some index changes

--- a/MusicPlayer/Spotify/Pages/Index.razor
+++ b/MusicPlayer/Spotify/Pages/Index.razor
@@ -62,7 +62,7 @@
     {
         Playlists?.Add(new PlaylistModel()
             {
-                Id = Guid.NewGuid(),
+                Id = Guid.Empty,
                 Image = PlaylistImages.DefaultImage,
                 Title = "Title"
             });
