auto play track after ending last track bug fixed

--- a/MusicPlayer/Spotify/Shared/Trackbar.razor
+++ b/MusicPlayer/Spotify/Shared/Trackbar.razor
@@ -327,6 +327,7 @@
         {
             TrackIndex = 0;
             InitializeTrack(Tracks[TrackIndex].Id);
+            StateHasChanged();
             if (jsModule is not null)
             {
                 await jsModule.InvokeVoidAsync("Trackbar.SetStartTrack", Audio);
